gitlab password stored in kv

--- a/exercise2/gitlab_values.yaml
+++ b/exercise2/gitlab_values.yaml
@@ -22,3 +22,9 @@ global:
     password:
       secret: psql-pword
       key: password
+  
+gitlab:
+  migrations:
+    initialRootPassword:
+      secret: gitlab-pword
+      key: password
