--- a/exercise2/secrets/psql-pword.yaml
+++ b/exercise2/secrets/psql-pword.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gitlab-pword
+  name: psql-pword
 type: Opaque
 data:
-  password: SGVsbG9Xb3JkbDEyMzQl
+  password: '<Postgres Password>'
