--- a/exercise2/gitlab_values.yaml
+++ b/exercise2/gitlab_values.yaml
@@ -49,5 +49,5 @@ gitlab:
 #   allowSingleSignOn: [ 'saml']
 #   autoLinkSamlUser: true
 #   providers: 
-#     - secret: azure_activedirectory_v2
+#     - secret: azure_ad
 # # https://docs.gitlab.com/charts/charts/globals.html#pod:~:text=Once%20created%2C%20the%20providers%20are%20enabled%20by%20providing%20the%20maps%20in%20configuration%2C%20as%20shown%20below%3A
